addons/kotsadm/0.9.4/schemahero.yaml
# TODO use a generated name with timestamp
apiVersion: v1
kind: Pod
metadata:
  name: kotsadm-migrations
spec:
  restartPolicy: OnFailure
  containers:
  - name: kotsadm-migrations
    image: kotsadm/kotsadm-migrations:v0.9.4
